plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.4.10'
    id "org.sonarqube" version "2.7"
    id "jacoco"
}

group 'com.reedelk'
version '0.9.1-SNAPSHOT'

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        url "http://localhost:8081/repository/reedelk"
    }
}

dependencies {
    compile group: 'org.json', name: 'json', version: '20190722'
    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.14.0'
    compile group: 'com.reedelk', name: 'runtime-api', version: '0.9.1-SNAPSHOT'
    compile group: 'com.reedelk', name: 'runtime-commons', version: '0.9.1-SNAPSHOT'
    compile group: 'com.reedelk', name: 'module-descriptor', version: '0.9.1-SNAPSHOT'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.12.2'
    testCompile group: 'org.skyscreamer', name: 'jsonassert', version: '1.5.0'
    testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '2.25.1'
}

test {
    useJUnitPlatform()
}

intellij {
    plugins = ["maven", "java", "groovy"]

    version '2020.1'
    type 'CE' // CE for (for Community Edition) or IU (for Ultimate edition)
}

jacoco {
    toolVersion = "0.8.5"
}

patchPluginXml {
    sinceBuild '191'
    untilBuild '202'
}

jar {
    manifest {
        attributes 'Implementation-Version': version
    }
}
